# rldyour-codex

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RTK.md  SECURITY.md  SUPPORT.md  pyproject.toml  pyrightconfig.json
.agents/plugins/: marketplace.json
.claude/: CLAUDE.md
.devcontainer/: Dockerfile  devcontainer.json
.gds/: bundle.lock.yaml  compiled-policy.json  repository.yaml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  change_request.yml  config.yml
.github/branch-protection/: main.json
.github/workflows/: README.md  codeql.yml  cross-platform.yml  dependency-check.yml  dependency-review.yml  labeler.yml  release.yml  scorecard.yml  secret-scan.yml  security-static.yml  validate.yml
.serena/: .flow_blocker_ack.json  project.yml
.serena/memories/: ADR-01-CORE.md  BROWSER-01-WORKFLOW.md  (+42 more)
config/: mcp-runtime-versions.env  rldyour-contract.json  skill-routing-policy.json
docs/: contract-matrix.md  dependency-updates.md  github-branch-protection.md  observability.md  release-process.md  rollback-restore.md
references/: codex-baseline.json  codex-surface-adoption.md
scripts/: bootstrap_check.sh  check_mcp_runtime_versions.py  check_serena_memory_freshness.py  classify_ci_noise.py  codex_openai_metadata_policy.py  collect_diagnostics.sh  doctor_system_codex.sh  install_local_git_hooks.sh  install_system_codex.sh  plugin_cache_contract.py  release_manifest.py  release_sbom.py  rollback_system_codex.sh  scan_text_security.py  smoke_clean_bootstrap.sh  smoke_codex_hook_listing.py  smoke_codex_hooks_migration.sh  smoke_flow_branch_cleanup.sh  smoke_fullrepo_bootstrap_init.sh  smoke_fullrepo_sync.sh  smoke_hooks.sh  smoke_local_git_guard.sh  smoke_mcp_capabilities.py  smoke_mcp_capabilities.sh  smoke_mcp_runtime.sh  smoke_serena_memory_freshness.sh  smoke_serena_memory_taxonomy.sh  sync_fullrepo_branch.sh  validate_action_pins.py  validate_agent_tools.py  validate_agents_context_budget.py  validate_browser_provider_policy.py  validate_codex_managed_agents_bilingual.py  validate_codex_mcp_env_forwarding.py  validate_contract.py  validate_execpolicy_rules.sh  validate_fast.sh  validate_instruction_docs.py  validate_marketplace.sh  validate_plugin_versions.py  (+5 more)
system/: AGENTS.md
tests/: conftest.py
(+212 files in other folders)
