[project]
name = "rldyour-codex"
version = "0.4.2"
description = "Personal Codex marketplace with rldyour plugins, MCP servers, skills, hooks, and SDLC tooling."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Danil Silantyev", email = "rldyourmnd@users.noreply.github.com" },
]
maintainers = [
  { name = "Danil Silantyev", email = "rldyourmnd@users.noreply.github.com" },
]
keywords = ["codex", "openai-codex", "marketplace", "mcp", "claude-code", "agents", "plugins"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Topic :: Software Development",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/NDDev-it-com/rldyour-codex"
Repository = "https://github.com/NDDev-it-com/rldyour-codex"
Issues = "https://github.com/NDDev-it-com/rldyour-codex/issues"
Changelog = "https://github.com/NDDev-it-com/rldyour-codex/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--cov-fail-under=75",
  "--junitxml=pytest.xml",
]

[tool.coverage.run]
branch = true
parallel = false

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if __name__ == .__main__.:",
  "raise SystemExit\\(main\\(\\)\\)",
]
